Possibly fix the tablet/mobile hero spacing.

--- a/src/components/homeHero/homeHero.css
+++ b/src/components/homeHero/homeHero.css
@@ -3,6 +3,10 @@
   position: relative;
 }
 
+figure.home__img img {
+  max-height: 80vw;
+}
+
   /* TABLET VERSION */
   
 @media (min-width: 768px) {
